test/Fail/Issue4518.err
Issue4518.agda:13.1-12: error: [NoParseForLHS]
Could not parse the left-hand side ... | suc n
Problematic expression: (suc n)
Operators used in the grammar:
  None
when scope checking the left-hand side ... | suc n in the
definition of test
